[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-modulus"
authors = [
  { name="NVIDIA Modulus Team"},
]
description = "A deep learning framework for AI-driven multi-physics systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache 2.0"}
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.4,<1.25",
    "h5py>=3.7.0",
    "xarray>=2023.1.0",
    "zarr>=2.14.2",
    "nvidia_dali_cuda110>=1.16.0",
    "s3fs>=2023.5.0",
    "setuptools>=67.6.0",
    "certifi>=2023.7.22",
    "pytest>=6.0.0",
    "pyyaml>=6.0",
    "onnx>=1.14.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "mpi4py>=3.1.4",
    "netcdf4>=1.6.3",
    "ruamel.yaml>=0.17.22",
    "scikit-learn>=1.0.2",
    "warp-lang>=0.6.0",
    "tensorly>=0.8.1",
    "vtk>=9.2.6",
    "pyvista>=0.40.1",
    "tensorly-torch>=0.4.0",
    "torch-harmonics>=0.6.2",
]


[tool.setuptools.dynamic]
version = {attr = "modulus.__version__"}

[tool.setuptools.packages.find]
include = ["modulus", "modulus.*"] 
